# re-ayakapj

./: .env.example  .gitignore  config_loader.py  pyproject.toml  requirements.txt
modules/: error_handler.py  help_cog.py  music.py  music_settings.py  player_resume.py  tts.py
utils/: client.py  others.py
utils/music/: converters.py  errors.py  interactions.py  models.py  spotify.py
utils/music/skins/normal_player/: ayaka_skinV2.py
wavelink/: player.py  websocket.py
