[project]
name = "re-ayakapj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "asgiref>=3.11.1",
    "colorama>=0.4.6",
    "dave-py>=0.1.2",
    "disnake[voice]>=2.12.0",
    "dnspython>=2.6.1",
    "emoji>=2.15.0",
    "gtts>=2.5.4",
    "humanize>=4.15.0",
    "motor[srv]>=3.7.1",
    "nodriver>=0.48.1",
    "orjson>=3.11.7",
    "packaging>=26.0",
    "psutil>=7.2.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-ffmpeg>=2.0.12",
    "pytube>=15.0.0",
    "pytz>=2026.1.post1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "soundcloud-v2>=1.6.2",
    "spotipy>=2.26.0",
    "tinymongo>=0.2.0",
    "tornado>=6.5.5",
    "typing-extensions>=4.15.0",
    "unidecode>=1.4.0",
    "urllib3>=2.1.0",
    "user-agent>=0.1.14",
    "validators>=0.35.0",
    "websocket-client>=1.9.0",
    "yarl>=1.23.0",
    "yt-dlp>=2026.3.17",
]
